src/static/pycontw-2018/styles/index.scss
@import 'site';
@import 'index-mixins';

.top-navbar {
	@include on-desktop {
		border-bottom-color: transparent;
	}

	.navbar-logo {
		margin-top: (3 * $top-navbar-height - $top-navbar-logo-height) / 2;
	}
}

$menu-desktop-border-radius: 8px;

.menu-navbar-desktop {
	@include menu-navbar-desktop(
		url('../assets/logo-indigo.svg'), $indigo, $dark-slate-blue, $text-dark);
	border-radius: $menu-desktop-border-radius;
	background-color: $white;
	box-shadow: 0px -8px 10px rgba(0, 0, 0, 0.2);
}

.index-hero {
	@import 'index-hero';
}

.index-introduction {
	@include index-section;
	@include logo-background-section;

	@include on-desktop {
		margin-top: 0 - $menu-desktop-height / 2;
		padding-top: 160px;
	}

	.my-pycon {
		@include button(276deg, $dark-peach, $maize);
		margin-top: 40px;
	}
}

.index-volunteer {
	@include index-section;
	padding: 120px inherit;
	background-image: linear-gradient(159deg, $indigo, $dark-slate-blue);

	article:first-of-type {
		margin-top: 0;
	}
	h2, p {
		color: $white;
	}

	.volunteer {
		@include button(259deg, $azure, $ultramarine-blue);
		margin-top: 40px;
	}
}

.index-partners {
	@include index-section();
	@include circle-background-section();

	> .container {
		@include container(904px);
	}

	h3 {
		text-transform: capitalize;
	}

	.partners {
		$item-spacing: 32px;

		display: flex;
		flex-wrap: wrap;
		justify-content: center;
		margin: 32px 0;
		padding: 0;
		border-bottom: 2px solid $white;
		list-style: none inside;

		&::after {
			content: '';
			width: 100%;
			height: 48px;
			border-bottom: 1px solid #dad0ea;
		}

		@include on-desktop() {
			margin: 32px #{0 - $item-spacing};
		}

		> li {
			flex: 1;
			text-align: center;
			margin: $item-spacing / 2;

			@include on-desktop() {
				flex: 0 1 calc(33.3333% - #{$item-spacing});
			}

			> a img {
				position: relative;
				z-index: $background-deco-index + 1;
				height: 64px;
				min-width: 120px;
				max-width: 320px;
			}
		}
	}

	.sponsorship {
		@include button(276deg, $dark-peach, $maize);
	}
}

